- Improvement: In standalone and extracurricular tuitions, save the custom calculation description in debit entry instead of academic treasury event

8.0.2 (29-07-2021)
- Improvement: Close debit notes academic debt generation rule allow close of interests (#UL-IGOT-1129)
- Improvement: Add document observations & terms and conditions to be exported in debt report beans

8.0.1 (27-07-2021)
- Bug Fix: Error on copy of plans, invisible fields not are deleted
- Bug Fix: Reverted deletion of  PaymentPenaltySettings and PaymentPenaltyEventTarget (#UL-ISEG-1757)

8.0.0 (26-07-2021)
- Refactor: Allow specification of different product for standalone/extacurricular payment plans
- Improvement: Refactorization to use CustomCalculatorsMap on fillProperties
- Refactor: Refactor academic domain to dependent platform services
- Refactor: Move Bennu specific service implementations to fenixedu-academic-treasury-ui

7.2.2 (13-07-2021)
- Refactor: Remove excludesIfMatches property, which is not used
- Refactor: Use academic treasury dependent platform services to translate statute type description

7.2.1 (18-06-2021)
- Bug Fix: Remove and replace condition tuition rule beans

7.2.0 (17-06-2021)
- Refactor: Deprecate PaymentPenaltyEventTarget
- Bug Fix: Include other treasury events than AcademicTreasuryEvent, associated with debt account 

7.1.1 (15-06-2021)
- Refactor: Use TuitionPaymentPlanOrder to find a tuition payment plan by degree curricular plan

7.1.0 (07-06-2021)
- New Fixture: Shared tuition payment plan between curricular plans, check if payment plan is reachable, tuition conditions, tuition installments custom calculators
- Improvement: Use default payment platform to Automatic rules and Academic services
- Improvement: Add settlement note ERP certification date
- Refactor: Refactor payment penalty from fenixedu-academic-treasury-base to fenixedu-treasury

7.0.3 (10-05-2021)
- Refactor: Replace discontinued PaymentCodePool by DigitalPaymentPlatform

7.0.2 (13-04-2021)