@@ -1,4 +1,5 @@
 - Improvement: In standalone and extracurricular tuitions, save the custom calculation description in debit entry instead of academic treasury event
+- Bug Fix: In Treasury Bridge API, if there is not finantial entity associated to a degree return null as debt account
 
 8.0.2 (29-07-2021)
 - Improvement: Close debit notes academic debt generation rule allow close of interests (#UL-IGOT-1129)
